--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,16 @@
-name: CD deploy new feature
-on:
-  push:
-    branches: 
-      - main
-
+name: remote ssh command
+on: [push]
 jobs:
-  build_deploy_digitalocean:
-    runs-on: ubuntu-latest    
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
     steps:
-      - name: the deploy new feature
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          script: whoami
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: whoami
