--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,19 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      #- name: Checkout code
+      #  uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'  # Specify the Node.js version
+      #- name: Set up Node.js
+      #  uses: actions/setup-node@v3
+      #  with:
+      #    node-version: '20'  # Specify the Node.js version
 
-      - name: Install dependencies
-        run: npm install
+      #- name: Install dependencies
+      #  run: npm install
 
-      - name: Build
-        run: npm run build
+      #- name: Build
+      #  run: npm run build
 
       - name: Deploy to DigitalOcean
         env:
@@ -30,4 +30,4 @@ jobs:
           USER: ${{ secrets.SSH_USER }}
           HOST: ${{ secrets.SSH_HOST }}
         run: |
-          ssh $USER@$HOST "/var/www/html/publish.sh"
+          rsync -avz -e "ssh -i $SSH_PRIVATE_KEY" --delete ./build/ $USER@$HOST:/var/www/myapp/
