--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,4 +14,5 @@ jobs:
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: | 
-          echo "Nice Job!!!"
+          cd /var/www/html
+          ./publish.sh
